# C-programming-course

./: .gitignore  CMakeLists.txt
Part1-Bascis_of_C/: CMakeLists.txt
Part1-Bascis_of_C/ASCII/: CMakeLists.txt  ascii.c
Part1-Bascis_of_C/Anagrams/: CMakeLists.txt  anagrammit.c  anagrammit.h  main.c
Part1-Bascis_of_C/Caesar_cypher/: CMakeLists.txt  caesar.c  caesar.h  main.c
Part1-Bascis_of_C/Command_line_arguments/: CMakeLists.txt  komentorivi.c
Part1-Bascis_of_C/Equation/: CMakeLists.txt  yhtalo.c
Part1-Bascis_of_C/Float_comparison/: CMakeLists.txt  likimvrt.c  likimvrt.h
Part1-Bascis_of_C/Geometry/: CMakeLists.txt  geometria.c  geometria.h  main.c
Part1-Bascis_of_C/Hello_world/: CMakeLists.txt  hei.c
Part1-Bascis_of_C/Lotto/: CMakeLists.txt  lotto.c
Part1-Bascis_of_C/Multiplication/: CMakeLists.txt  kertotaulu.c
Part1-Bascis_of_C/Multiplication2/: CMakeLists.txt  kertotaulu_2.c
Part1-Bascis_of_C/Numbers/: CMakeLists.txt  luvut.c
Part1-Bascis_of_C/Numbers2/: CMakeLists.txt  luvut_2.c
Part1-Bascis_of_C/Palindrome/: CMakeLists.txt  palindromit.c
Part1-Bascis_of_C/Parameter_table/: CMakeLists.txt  parametritaulu.c
Part1-Bascis_of_C/Roots/: CMakeLists.txt  juuret.c
Part1-Bascis_of_C/Statistics/: CMakeLists.txt  tilastoja.c
Part1-Bascis_of_C/Transform/: CMakeLists.txt  main.c  muunto.c  muunto.h
Part1-Bascis_of_C/Unsigned/: CMakeLists.txt  README.md  main.c  unsigned.c  unsigned.h
Part1-Bascis_of_C/Value_limits/: CMakeLists.txt  arvorajat.c
Part2-Bits_Pointers_Structs/: CMakeLists.txt
Part2-Bits_Pointers_Structs/Array_value_change/: CMakeLists.txt  main.c  muunna.c  muunna.h
Part2-Bits_Pointers_Structs/Bit_reverse/: CMakeLists.txt  bitit.c  bitit.h  main.c
Part2-Bits_Pointers_Structs/Bits/: CMakeLists.txt  bitit.c  bitit.h  main.c
Part2-Bits_Pointers_Structs/Float_IEEE-754/: CMakeLists.txt  ieee754.c
(+18 files in other folders)
