add_subdirectory(Hello_world)
add_subdirectory(Numbers)
add_subdirectory(Multiplication)
add_subdirectory(ASCII)
add_subdirectory(Command_line_arguments)
add_subdirectory(Numbers2)
add_subdirectory(Roots)
add_subdirectory(Lotto)
add_subdirectory(Multiplication2)
add_subdirectory(Statistics)
add_subdirectory(Equation)
add_subdirectory(Palindrome)
add_subdirectory(Parameter_table)
add_subdirectory(Geometry)
add_subdirectory(Transform)
add_subdirectory(Caesar_cypher)
add_subdirectory(Anagrams)
